--- a/setup.cfg
+++ b/setup.cfg
@@ -34,3 +34,7 @@ install_requires =
 # E902 - IOError
 select = E101,W191,W291,W292,W293,W391,E111,E112,E113,E901,E902
 exclude = extern,sphinx,*parsetab.py
+
+[tool:pytest]
+filterwarnings =
+    ignore::DeprecationWarning
