Add tox config file

--- a/setup.cfg
+++ b/setup.cfg
@@ -20,6 +20,10 @@ install_requires =
     mistune
     sphinx_bootstrap_theme
 
+[options.extras_require]
+tests =
+    pytest
+
 [pycodestyle]
 # E101 - mix of tabs and spaces
 # W191 - use of tabs
