--- a/setup.cfg
+++ b/setup.cfg
@@ -24,7 +24,7 @@ install_requires =
 tests =
     pytest
 
-[pycodestyle]
+[flake8]
 # E101 - mix of tabs and spaces
 # W191 - use of tabs
 # W291 - trailing whitespace
@@ -37,7 +37,7 @@ tests =
 # E901 - SyntaxError or IndentationError
 # E902 - IOError
 select = E101,W191,W291,W292,W293,W391,E111,E112,E113,E901,E902
-exclude = extern,sphinx,*parsetab.py
+exclude = static,templates
 
 [tool:pytest]
 filterwarnings =
