--- a/tox.ini
+++ b/tox.ini
@@ -5,6 +5,16 @@ extras= tests
 commands=
     pytest {posargs}
 
+[testenv:asdf-standard]
+changedir={envtmpdir}
+deps=
+    sphinx
+whitelist_externals=
+    git
+commands=
+    git clone https://github.com/spacetelescope/asdf-standard
+    sphinx-build asdf-standard/source asdf-standard/build
+
 [testenv:twine]
 deps=
     twine
