--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-language: python
+language: c
 
 os:
     - linux
@@ -20,6 +20,10 @@ env:
         # to repeat them for all configurations.
         - TOX_CMD='tox --'
         - TOX_ARGS=''
+        # This is the Python version that will be used by the parent conda
+        # environment, but it will not be used in the test environments
+        # themselves.
+        - PYTHON_VERSION=3.6
 
     matrix:
         # Make sure that installation does not fail
@@ -55,6 +59,9 @@ matrix:
           env: TOXENV='py37'
 
 install:
+    - git clone git://github.com/astropy/ci-helpers.git
+    - source ci-helpers/travis/setup_conda.sh
+    - conda install openssl
     - pip install tox
 
 script:
