--- a/tox.ini
+++ b/tox.ini
@@ -43,7 +43,7 @@ deps=
     codecov
     coverage
 commands=
-    coverage run --source=sphinx_asdf --rcfile={toxinidir}/sphinx_asdf/tests/coveragerc \
+    coverage run --source=sphinx_asdf --rcfile={toxinidir}/tests/coveragerc \
                  -m pytest --remote-data --open-files
     coverage report -m
     codecov -e TOXENV
