Fix coverage run

--- a/tox.ini
+++ b/tox.ini
@@ -43,8 +43,7 @@ deps=
     codecov
     coverage
 commands=
-    coverage run --source=sphinx_asdf --rcfile={toxinidir}/tests/coveragerc \
-                 -m pytest --remote-data --open-files
+    coverage run --source=sphinx_asdf --rcfile={toxinidir}/tests/coveragerc -m pytest
     coverage report -m
     codecov -e TOXENV
 passenv= TOXENV CI TRAVIS TRAVIS_* CODECOV_*
