--- a/.travis.yml
+++ b/.travis.yml
@@ -56,7 +56,7 @@ matrix:
           env: TOXENV='py36'
 
         - os: windows
-          env: TOXENV='py37'
+          env: TOXENV='py37' PYTHON_VERSION=3.7
 
 install:
     - git clone git://github.com/astropy/ci-helpers.git
