--- a/.github/workflows/sphinx_asdf_ci.yml
+++ b/.github/workflows/sphinx_asdf_ci.yml
@@ -22,7 +22,7 @@ jobs:
             script: |
               python -m pip install --upgrade pip
               python -m pip install flake8
-            toxenv: 
+            toxenv: style
 
     steps:
       - name: Checkout code
