--- a/tox.ini
+++ b/tox.ini
@@ -13,7 +13,7 @@ whitelist_externals=
     git
 commands=
     git clone https://github.com/spacetelescope/asdf-standard
-    sphinx-build asdf-standard/source asdf-standard/build
+    sphinx-build asdf-standard/docs/source asdf-standard/docs/build
 
 [testenv:twine]
 deps=
