--- a/.github/workflows/sphinx_asdf_ci.yml
+++ b/.github/workflows/sphinx_asdf_ci.yml
@@ -25,6 +25,85 @@ jobs:
               python -m pip install sphinx
             toxenv: py39
 
+          - name: Python 3.8
+            python-version: 3.8
+            os: ubuntu-latest
+            script: |
+              python -m pip install --upgrade pip
+              python -m pip install .[tests]
+              python -m pip install sphinx
+            toxenv: py38
+
+          - name: Python 3.7
+            python-version: 3.7
+            os: ubuntu-latest
+            script: |
+              python -m pip install --upgrade pip
+              python -m pip install .[tests]
+              python -m pip install sphinx
+            toxenv: py37
+
+          - name: Python 3.6
+            python-version: 3.6
+            os: ubuntu-latest
+            script: |
+              python -m pip install --upgrade pip
+              python -m pip install .[tests]
+              python -m pip install sphinx
+            toxenv: py36
+
+          - name: Python 3.9, Windows
+            python-version: 3.9
+            os: windows-latest
+            script: |
+              python -m pip install --upgrade pip
+              python -m pip install .[tests]
+              python -m pip install sphinx
+            toxenv: py39
+
+          - name: Python 3.9, MacOS
+            python-version: 3.9
+            os: macos-latest
+            script: |
+              python -m pip install --upgrade pip
+              python -m pip install .[tests]
+              python -m pip install sphinx
+            toxenv: py39
+
+          - name: ASDF Standard Build
+            python-version: 3.9
+            os: ubuntu-latest
+            script: |
+              python -m pip install --upgrade pip
+              python -m pip install sphinx
+            toxenv: asdf-standard
+
+          - name: Code Style Checks
+            python-version: 3.9
+            os: ubuntu-latest
+            script: |
+              python -m pip install --upgrade pip
+              python -m pip install flake8
+            toxenv: style
+
+          - name: Twine
+            python-version: 3.9
+            os: ubuntu-latest
+            script: |
+              python -m pip install --upgrade pip
+              python -m pip install twine
+            toxenv: twine
+
+          - name: Check Documents
+            python-version: 3.9
+            os: ubuntu-latest
+            script: |
+              python -m pip install --upgrade pip
+              python -m pip install .[tests]
+              python -m pip install collective.checkdocs
+              python -m pip install sphinx
+            toxenv: checkdocs
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
