--- a/.github/workflows/sphinx_asdf_ci.yml
+++ b/.github/workflows/sphinx_asdf_ci.yml
@@ -11,98 +11,11 @@ on:
 
 jobs:
   tox:
-    name: ${{ matrix.name }}
-    runs-on: ${{ matrix.os }}
+    name: Python Testsing ${{ matrix.python-version }} 
+    runs-on: ubuntu-latest
     strategy:
       matrix:
-        include:
-          - name: Python 3.9
-            python-version: 3.9
-            os: ubuntu-latest
-            script: |
-              python -m pip install --upgrade pip
-              python -m pip install .[tests]
-              python -m pip install sphinx
-            toxenv: py39
-
-          - name: Python 3.8
-            python-version: 3.8
-            os: ubuntu-latest
-            script: |
-              python -m pip install --upgrade pip
-              python -m pip install .[tests]
-              python -m pip install sphinx
-            toxenv: py38
-
-          - name: Python 3.7
-            python-version: 3.7
-            os: ubuntu-latest
-            script: |
-              python -m pip install --upgrade pip
-              python -m pip install .[tests]
-              python -m pip install sphinx
-            toxenv: py37
-
-          - name: Python 3.6
-            python-version: 3.6
-            os: ubuntu-latest
-            script: |
-              python -m pip install --upgrade pip
-              python -m pip install .[tests]
-              python -m pip install sphinx
-            toxenv: py36
-
-          - name: Python 3.9, Windows
-            python-version: 3.9
-            os: windows-latest
-            script: |
-              python -m pip install --upgrade pip
-              python -m pip install .[tests]
-              python -m pip install sphinx
-            toxenv: py39
-
-          - name: Python 3.9, MacOS
-            python-version: 3.9
-            os: macos-latest
-            script: |
-              python -m pip install --upgrade pip
-              python -m pip install .[tests]
-              python -m pip install sphinx
-            toxenv: py39
-
-          - name: ASDF Standard Build
-            python-version: 3.9
-            os: ubuntu-latest
-            script: |
-              python -m pip install --upgrade pip
-              python -m pip install sphinx
-            toxenv: asdf-standard
-
-          - name: Code Style Checks
-            python-version: 3.9
-            os: ubuntu-latest
-            script: |
-              python -m pip install --upgrade pip
-              python -m pip install flake8
-            toxenv: style
-
-          - name: Twine
-            python-version: 3.9
-            os: ubuntu-latest
-            script: |
-              python -m pip install --upgrade pip
-              python -m pip install twine
-            toxenv: twine
-
-          - name: Check Documents
-            python-version: 3.9
-            os: ubuntu-latest
-            script: |
-              python -m pip install --upgrade pip
-              python -m pip install .[tests]
-              python -m pip install collective.checkdocs
-              python -m pip install sphinx
-            toxenv: checkdocs
+        python-version = ["3.9"]
 
     steps:
       - name: Checkout code
@@ -113,38 +26,8 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Install Dependencies
-        run: |
-          ${{ matrix.script }}
       - name: Install tox
         run: |
-          python -m pip install --upgrade pip
           python -m pip install tox
       - name: Run tox
         run: tox -e ${{ matrix.toxenv }}
-
-  code_coverage:
-    name: Code Coverage Report
-    runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.9
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        python -m pip install -e .[test]
-        python -m pip install sphinx
-        python -m pip install pytest-cov
-        python -m pip install tox
-    - name: Run tox
-      run: |
-        tox -e coverage
-    - name: Upload coverage to codecoverage
-      uses: codecov/codecov-action@v1
-      with:
-        file: ./coverage.xml
-        flags: unit
