--- a/.github/workflows/sphinx_asdf_ci.yml
+++ b/.github/workflows/sphinx_asdf_ci.yml
@@ -30,4 +30,4 @@ jobs:
         run: |
           python -m pip install tox
       - name: Run tox
-        run: tox -e ${{ matrix.toxenv }}
+        run: tox
