--- a/.github/workflows/sphinx_asdf_ci.yml
+++ b/.github/workflows/sphinx_asdf_ci.yml
@@ -10,12 +10,12 @@ on:
     branches:
 
 jobs:
-  tox:
-    name: Python Testsing ${{ matrix.python-version }} 
+  tox_pytest:
+    name: Python Testing ${{ matrix.python-version }} 
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.9"]
+        python-version: ["3.7", "3.8", "3.9"]
 
     steps:
       - name: Checkout code
@@ -31,3 +31,25 @@ jobs:
           python -m pip install tox
       - name: Run tox
         run: tox
+
+  tox_env:
+    name: Python Testing ${{ matrix.toxenv }} 
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        toxenv: ["twine", "checkdocs", "style", "asdf-standard"]
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      - name: Set up Python 3.9, TOXENV = ${{ matrix.toxenv }}
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.9
+      - name: Install tox
+        run: |
+          python -m pip install tox
+      - name: Run tox
+        run: tox -e ${{ matrix.toxenv }}
