--- a/.github/workflows/sphinx_asdf_ci.yml
+++ b/.github/workflows/sphinx_asdf_ci.yml
@@ -11,11 +11,60 @@ on:
 
 jobs:
   tox_pytest:
-    name: Python Testing ${{ matrix.python-version }} 
-    runs-on: ubuntu-latest
+    name: ${{ matrix.name }} 
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        python-version: ["3.7", "3.8", "3.9"]
+        include: 
+          - name: Python ${{ matrix.python-version }}
+            python-version: "3.9"
+            os: ubuntu-latest
+            toxenv: py39
+
+          - name: Python ${{ matrix.python-version }}
+            python-version: "3.8"
+            os: ubuntu-latest
+            toxenv: py38
+
+          - name: Python ${{ matrix.python-version }}
+            python-version: "3.7"
+            os: ubuntu-latest
+            toxenv: py37
+
+          - name: Python ${{ matrix.python-version }}, Windows
+            python-version: "3.9"
+            os: windows-latest
+            toxenv: py39
+
+          - name: Python ${{ matrix.python-version }}, MacOS
+            python-version: "3.9"
+            os: macos-latest
+            toxenv: py39
+
+          - name: Twine
+            python-version: "3.9"
+            os: ubuntu-latest
+            toxenv: twine
+
+          - name: Document Checks
+            python-version: "3.9"
+            os: ubuntu-latest
+            toxenv: checkdocs
+
+          - name: Code Style Checks
+            python-version: "3.9"
+            os: ubuntu-latest
+            toxenv: style
+
+          - name: ASDF Standard Document Build
+            python-version: "3.9"
+            os: ubuntu-latest
+            toxenv: asdf-standard
+
+          - name: Code Coverage
+            python-version: "3.9"
+            os: ubuntu-latest
+            toxenv: codecov
 
     steps:
       - name: Checkout code
@@ -26,28 +75,6 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Install tox
-        run: |
-          python -m pip install tox
-      - name: Run tox
-        run: tox
-
-  tox_env:
-    name: Tox Environment - ${{ matrix.toxenv }} 
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        toxenv: ["twine", "checkdocs", "style", "asdf-standard", "coverage"]
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-      - name: Set up Python 3.9, TOXENV = ${{ matrix.toxenv }}
-        uses: actions/setup-python@v2
-        with:
-          python-version: 3.9
       - name: Install tox
         run: |
           python -m pip install tox
