--- a/.github/workflows/sphinx_asdf_ci.yml
+++ b/.github/workflows/sphinx_asdf_ci.yml
@@ -16,27 +16,27 @@ jobs:
     strategy:
       matrix:
         include: 
-          - name: Python ${{ matrix.python-version }}
+          - name: Python 3.9
             python-version: "3.9"
             os: ubuntu-latest
             toxenv: py39
 
-          - name: Python ${{ matrix.python-version }}
+          - name: Python 3.8
             python-version: "3.8"
             os: ubuntu-latest
             toxenv: py38
 
-          - name: Python ${{ matrix.python-version }}
+          - name: Python 3.7
             python-version: "3.7"
             os: ubuntu-latest
             toxenv: py37
 
-          - name: Python ${{ matrix.python-version }}, Windows
+          - name: Python 3.9, Windows
             python-version: "3.9"
             os: windows-latest
             toxenv: py39
 
-          - name: Python ${{ matrix.python-version }}, MacOS
+          - name: Python 3.9, MacOS
             python-version: "3.9"
             os: macos-latest
             toxenv: py39
