--- a/.github/workflows/sphinx_asdf_ci.yml
+++ b/.github/workflows/sphinx_asdf_ci.yml
@@ -21,6 +21,36 @@ jobs:
             os: ubuntu-latest
             toxenv: py39
 
+          - name: Python 3.9, Windows
+            python-version: "3.9"
+            os: windows-latest
+            toxenv: py39
+
+          - name: Python 3.9, MacOS
+            python-version: "3.9"
+            os: macos-latest
+            toxenv: py39
+
+          - name: Twine
+            python-version: "3.9"
+            os: ubuntu-latest
+            toxenv: twine
+
+          - name: Document Checks
+            python-version: "3.9"
+            os: ubuntu-latest
+            toxenv: checkdocs
+
+          - name: Code Style Checks
+            python-version: "3.9"
+            os: ubuntu-latest
+            toxenv: style
+
+          - name: ASDF Standard Document Build
+            python-version: "3.9"
+            os: ubuntu-latest
+            toxenv: asdf-standard
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
