--- a/.github/workflows/sphinx_asdf_ci.yml
+++ b/.github/workflows/sphinx_asdf_ci.yml
@@ -54,7 +54,7 @@ jobs:
           - name: Code Coverage
             python-version: "3.9"
             os: ubuntu-latest
-            toxenv: codecov
+            toxenv: coverage
 
     steps:
       - name: Checkout code
