--- a/.github/workflows/sphinx_asdf_ci.yml
+++ b/.github/workflows/sphinx_asdf_ci.yml
@@ -70,3 +70,7 @@ jobs:
           python -m pip install tox
       - name: Run tox
         run: tox -e ${{ matrix.toxenv }}
+      - name: Upload Code Coverage
+        uses: codecov/codecov-action@v1
+        with:
+          file: ./coverage.xml
