--- a/.github/workflows/sphinx_asdf_ci.yml
+++ b/.github/workflows/sphinx_asdf_ci.yml
@@ -71,6 +71,7 @@ jobs:
       - name: Run tox
         run: tox -e ${{ matrix.toxenv }}
       - name: Upload Code Coverage
+        if: ${{ contains(matrix.toxenv,'coverage') }}
         uses: codecov/codecov-action@v1
         with:
           file: ./coverage.xml
