Add github actions (#23)
* Add github actions.

* Remove Travis CI.

--- a/tox.ini
+++ b/tox.ini
@@ -13,7 +13,7 @@ whitelist_externals=
     git
 commands=
     git clone https://github.com/spacetelescope/asdf-standard
-    sphinx-build asdf-standard/source asdf-standard/build
+    sphinx-build asdf-standard/docs/source asdf-standard/docs/build
 
 [testenv:twine]
 deps=
@@ -22,7 +22,6 @@ commands=
     twine check {distdir}/*
 
 [testenv:checkdocs]
-basepython= python3.6
 deps=
     collective.checkdocs
     pygments
@@ -30,14 +29,12 @@ commands=
     python setup.py checkdocs
 
 [testenv:style]
-basepython= python3.6
 deps=
     flake8
 commands=
     flake8 sphinx_asdf --count
 
 [testenv:coverage]
-basepython= python3.7
 deps=
     sphinx
     codecov
