--- a/setup.cfg
+++ b/setup.cfg
@@ -18,6 +18,7 @@ setup_requires = setuptools_scm
 install_requires =
     pyyaml
     mistune
+    sphinx
     sphinx_bootstrap_theme
 
 [options.extras_require]
