--- a/.github/workflows/sphinx_asdf_ci.yml
+++ b/.github/workflows/sphinx_asdf_ci.yml
@@ -16,6 +16,11 @@ jobs:
     strategy:
       matrix:
         include: 
+          - name: Python 3.10 Tests
+            python-version: "3.10"
+            os: ubuntu-latest
+            toxenv: py310
+
           - name: Python 3.9, with Code Coverage
             python-version: "3.9"
             os: ubuntu-latest
