Restrict mistune version

--- a/setup.cfg
+++ b/setup.cfg
@@ -17,7 +17,7 @@ include_package_data = True
 setup_requires = setuptools_scm
 install_requires =
     pyyaml
-    mistune
+    mistune~=0.8.4
     sphinx
     sphinx_bootstrap_theme
 
