--- a/setup.cfg
+++ b/setup.cfg
@@ -16,6 +16,7 @@ python_requires = >=3.6
 include_package_data = True
 setup_requires = setuptools_scm
 install_requires =
+    asdf
     pyyaml
     mistune~=0.8.4
     sphinx
