--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 name = sphinx-asdf
 package_name = sphinx-asdf
 provides = sphinx_asdf
-author = Daniel D'Avella
+author = The ASDF Developers
 license = BSD-3-Clause
 license_file = LICENSE
 description = Sphinx plugin for generating documentation from ASDF schemas
@@ -17,10 +17,18 @@ include_package_data = True
 setup_requires = setuptools_scm
 install_requires =
     asdf
-    pyyaml
+    astropy>=5.0.4
+    docutils
+    graphviz
+    matplotlib
+    myst-parser
     mistune~=0.8.4
     sphinx
+    sphinx-astropy
     sphinx_bootstrap_theme
+    sphinx-rtd-theme
+    sphinx-inline-tabs
+    toml
 
 [options.extras_require]
 tests =
