--- a/tox.ini
+++ b/tox.ini
@@ -12,8 +12,64 @@ deps=
 whitelist_externals=
     git
 commands=
-    git clone https://github.com/spacetelescope/asdf-standard
+    git clone https://github.com/asdf-format/asdf-standard
+    pip install asdf-standard[docs]
     sphinx-build asdf-standard/docs/source asdf-standard/docs/build
+
+[testenv:asdf]
+changedir={envtmpdir}
+deps=
+    sphinx
+whitelist_externals=
+    git
+commands=
+    git clone https://github.com/asdf-format/asdf
+    pip install asdf[docs]
+    sphinx-build asdf/docs asdf/docs/build
+
+[testenv:asdf-transform-schemas]
+changedir={envtmpdir}
+deps=
+    sphinx
+whitelist_externals=
+    git
+commands=
+    git clone https://github.com/asdf-format/asdf-transform-schemas
+    pip install asdf-transform-schemas[docs]
+    sphinx-build asdf-transform-schemas/docs asdf-transform-schemas/docs/build
+
+[testenv:asdf-coordinates-schemas]
+changedir={envtmpdir}
+deps=
+    sphinx
+whitelist_externals=
+    git
+commands=
+    git clone https://github.com/asdf-format/asdf-coordinates-schemas
+    pip install asdf-coordinates-schemas[docs]
+    sphinx-build asdf-coordinates-schemas/docs asdf-coordinates-schemas/docs/build
+
+[testenv:asdf-wcs-schemas]
+changedir={envtmpdir}
+deps=
+    sphinx
+whitelist_externals=
+    git
+commands=
+    git clone https://github.com/asdf-format/asdf-wcs-schemas
+    pip install asdf-wcs-schemas[docs]
+    sphinx-build asdf-wcs-schemas/docs asdf-wcs-schemas/docs/build
+
+[testenv:asdf-astropy]
+changedir={envtmpdir}
+deps=
+    sphinx
+whitelist_externals=
+    git
+commands=
+    git clone https://github.com/astropy/asdf-astropy
+    pip install asdf-astropy[docs]
+    sphinx-build asdf-astropy/docs asdf-astropy/docs/build
 
 [testenv:twine]
 deps=
