--- a/tox.ini
+++ b/tox.ini
@@ -85,10 +85,13 @@ commands=
     python setup.py checkdocs
 
 [testenv:style]
-deps=
-    flake8
-commands=
-    flake8 sphinx_asdf --count
+skip_install = true
+description = Run all style and file checks with pre-commit
+deps =
+    pre-commit
+commands =
+    pre-commit install-hooks
+    pre-commit run {posargs:--color always --all-files --show-diff-on-failure}
 
 [testenv:coverage]
 deps=
