--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,42 @@
+[project]
+name = 'sphinx-asdf'
+description = 'Sphinx plugin for generating documentation from ASDF schemas'
+readme = 'README.rst'
+requires-python = '>=3.8'
+license = { file = 'LICENSE' }
+authors = [{ name = 'The ASDF Developers', email = 'help@stsci.edu' }]
+dependencies = [
+    'asdf',
+    'astropy >=5.0.4',
+    'docutils',
+    'graphviz',
+    'matplotlib',
+    'myst-parser',
+    'mistune ~=0.8.4',
+    'sphinx',
+    'sphinx-astropy',
+    'sphinx_bootstrap_theme',
+    'sphinx-rtd-theme',
+    'sphinx-inline-tabs'
+]
+dynamic = ['version']
+
+[project.optional-dependencies]
+tests = [
+    'pytest',
+]
+
+[project.urls]
+'tracker' = 'https://github.com/asdf-format/sphinx-asdf/issues'
+'documentation' = 'https://github.com/asdf-format/sphinx-asdf'
+'repository' = 'https://github.com/asdf-format/sphinx-asdf'
+
 [build-system]
-requires = ["setuptools>=42", "setuptools_scm[toml]>=3.4", "wheel"]
+requires = [
+    "setuptools>=60",
+    "setuptools_scm[toml]>=3.4",
+    "wheel"
+]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools_scm]
