--- a/tox.ini
+++ b/tox.ini
@@ -1,3 +1,6 @@
+[tox]
+isolated_build = True
+
 [testenv]
 deps=
     sphinx
@@ -82,7 +85,7 @@ deps=
     collective.checkdocs
     pygments
 commands=
-    python setup.py checkdocs
+    python checkdocs
 
 [testenv:style]
 skip_install = true
