--- a/tox.ini
+++ b/tox.ini
@@ -9,7 +9,7 @@ commands=
 changedir={envtmpdir}
 deps=
     sphinx
-whitelist_externals=
+allowlist_externals=
     git
 commands=
     git clone https://github.com/asdf-format/asdf-standard
@@ -20,7 +20,7 @@ commands=
 changedir={envtmpdir}
 deps=
     sphinx
-whitelist_externals=
+allowlist_externals=
     git
 commands=
     git clone https://github.com/asdf-format/asdf
@@ -31,7 +31,7 @@ commands=
 changedir={envtmpdir}
 deps=
     sphinx
-whitelist_externals=
+allowlist_externals=
     git
 commands=
     git clone https://github.com/asdf-format/asdf-transform-schemas
@@ -42,7 +42,7 @@ commands=
 changedir={envtmpdir}
 deps=
     sphinx
-whitelist_externals=
+allowlist_externals=
     git
 commands=
     git clone https://github.com/asdf-format/asdf-coordinates-schemas
@@ -53,7 +53,7 @@ commands=
 changedir={envtmpdir}
 deps=
     sphinx
-whitelist_externals=
+allowlist_externals=
     git
 commands=
     git clone https://github.com/asdf-format/asdf-wcs-schemas
@@ -64,7 +64,7 @@ commands=
 changedir={envtmpdir}
 deps=
     sphinx
-whitelist_externals=
+allowlist_externals=
     git
 commands=
     git clone https://github.com/astropy/asdf-astropy
