--- a/tox.ini
+++ b/tox.ini
@@ -75,7 +75,7 @@ commands=
 deps=
     twine
 commands=
-    twine check {distdir}/*
+    twine check {work_dir}/{package_env}/dist/*
 
 [testenv:checkdocs]
 deps=
