fix formatting of flowStyle description

--- a/setup.cfg
+++ b/setup.cfg
@@ -22,7 +22,7 @@ install_requires =
     graphviz
     matplotlib
     myst-parser
-    mistune~=0.8.4
+    mistune
     sphinx
     sphinx-astropy
     sphinx_bootstrap_theme
