add a lower pin for mistune

--- a/setup.cfg
+++ b/setup.cfg
@@ -22,7 +22,7 @@ install_requires =
     graphviz
     matplotlib
     myst-parser
-    mistune
+    mistune>=3
     sphinx
     sphinx-astropy
     sphinx_bootstrap_theme
