--- a/tox.ini
+++ b/tox.ini
@@ -113,7 +113,7 @@ allowlist_externals=
 commands=
     git clone https://github.com/spacetelescope/stdatamodels
     pip install ./stdatamodels[docs]
-    sphinx-build stdatamodels/docs stdatamodels/docs/build
+    sphinx-build stdatamodels/docs/source stdatamodels/docs/build
 
 [testenv:jwst]
 changedir={envtmpdir}
