--- a/setup.cfg
+++ b/setup.cfg
@@ -20,6 +20,7 @@ install_requires =
     astropy>=5.0.4
     docutils
     mistune>=3
+    packaging
     sphinx
     sphinx-astropy
     sphinx_bootstrap_theme
