--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,36 +4,58 @@ repos:
   rev: v4.4.0
   hooks:
   - id: check-added-large-files
+  - id: check-ast
   - id: check-case-conflict
   - id: check-yaml
     args: ["--unsafe"]
+  - id: check-toml
+  - id: check-merge-conflict
+  - id: check-symlinks
   - id: debug-statements
+  - id: detect-private-key
   - id: end-of-file-fixer
   - id: trailing-whitespace
 
-- repo: https://github.com/asottile/pyupgrade
-  rev: v3.13.0
+- repo: https://github.com/pre-commit/pygrep-hooks
+  rev: v1.10.0
   hooks:
-    - id: pyupgrade
-      args: ["--py38-plus"]
+    - id: python-check-blanket-noqa
+    - id: python-check-mock-methods
+    - id: rst-directive-colons
+    - id: rst-inline-touching-normal
+    - id: text-unicode-replacement-char
 
-- repo: https://github.com/pycqa/isort
-  rev: 5.12.0
+- repo: https://github.com/codespell-project/codespell
+  rev: v2.2.5
   hooks:
-    - id: isort
+    - id: codespell
+      args: ["--write-changes"]
+      additional_dependencies:
+        - tomli
+
+- repo: https://github.com/ikamensh/flynt/
+  rev: '1.0.1'
+  hooks:
+    - id: flynt
+      exclude: "asdf/(extern||_jsonschema)/.*"
+
+- repo: https://github.com/astral-sh/ruff-pre-commit
+  rev: 'v0.0.288'
+  hooks:
+    - id: ruff
+      args: ["--fix"]
 
 - repo: https://github.com/psf/black
   rev: 23.9.1
   hooks:
     - id: black
 
-- repo: https://github.com/PyCQA/flake8
-  rev: 6.1.0
+- repo: https://github.com/asottile/blacken-docs
+  rev: '1.16.0'
   hooks:
-    - id: flake8
+    - id: blacken-docs
 
-- repo: https://github.com/PyCQA/bandit
-  rev: 1.7.5
+- repo: https://github.com/abravalheri/validate-pyproject
+  rev: "v0.14"
   hooks:
-    - id: bandit
-      args: ["-c", "bandit.yaml"]
+    - id: validate-pyproject
