limit ruff rules

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -72,12 +72,12 @@ target-version = "py38"
 line-length = 120
 select = [
     # minimal set to match pre-ruff behavior
-    "E", # pycodestyle
-    "F", # pyflakes, autoflake
+    #"E", # pycodestyle
+    #"F", # pyflakes, autoflake
     "I", # isort
-    "S", # bandit
-    "UP", # pyupgrade
-    "RUF",  # ruff specific, includes yesqa
+    #"S", # bandit
+    #"UP", # pyupgrade
+    #"RUF",  # ruff specific, includes yesqa
 ]
 
 [tool.codespell]
