enable ruf rules

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -77,12 +77,13 @@ select = [
     "I", # isort
     "S", # bandit
     "UP", # pyupgrade
-    #"RUF",  # ruff specific, includes yesqa
+    "RUF",  # ruff specific, includes yesqa
 ]
 extend-ignore = [
     "F403", "F405",  # uses if import * should be removed
     "S101",  # asserts used in tests
     "S701",  # why is jinja being used?
+    "RUF012",  # we don't use typing
 ]
 
 [tool.codespell]
