--- a/.github/workflows/sphinx_asdf_ci.yml
+++ b/.github/workflows/sphinx_asdf_ci.yml
@@ -24,6 +24,11 @@ jobs:
     strategy:
       matrix:
         include:
+          - name: Python 3.12 Tests
+            python-version: "3.12-dev"
+            os: ubuntu-latest
+            toxenv: py312
+
           - name: Python 3.11 Tests
             python-version: "3.11"
             os: ubuntu-latest
