add dependency imported by but not required by sphinx

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ dependencies = [
 [project.optional-dependencies]
 tests = [
   "pytest",
+  "defusedxml",  # sphinx.testing.fixtures requires this
 ]
 [project.urls]
 'documentation' = 'https://sphinx-asdf.readthedocs.io/en/stable'
