--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,6 +50,11 @@ build-backend = "setuptools.build_meta"
 [tool.setuptools_scm]
 version_file = "sphinx_asdf/_version.py"
 
+[tool.pytest.ini_options]
+filterwarnings = [
+    'error',
+]
+
 [tool.black]
 line-length = 120
 force-exclude = '''
