--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,18 +2,13 @@
 name = "sphinx-asdf"
 description = "Sphinx plugin for generating documentation from ASDF schemas"
 readme = 'README.rst'
-license = { file = 'LICENSE' }
+license-files = ['LICENSE']
 authors = [{ name = 'The ASDF Developers', email = 'help@stsci.edu' }]
 requires-python = '>=3.9'
 classifiers = [
   'Development Status :: 5 - Production/Stable',
-  "License :: OSI Approved :: BSD License",
   'Programming Language :: Python',
   'Programming Language :: Python :: 3',
-  'Programming Language :: Python :: 3.9',
-  'Programming Language :: Python :: 3.10',
-  'Programming Language :: Python :: 3.11',
-  'Programming Language :: Python :: 3.12',
 ]
 dynamic = [
   'version',
@@ -76,6 +71,8 @@ line-length = 120
 [tool.ruff]
 target-version = "py38"
 line-length = 120
+
+[tool.ruff.lint]
 select = [
     # minimal set to match pre-ruff behavior
     "E", # pycodestyle
