--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "sphinx-asdf"
 description = "Sphinx plugin for generating documentation from ASDF schemas"
 readme = 'README.rst'
 license-files = ['LICENSE']
-authors = [{ name = 'The ASDF Developers', email = 'help@stsci.edu' }]
+authors = [{ name = 'The ASDF Developers' }]
 requires-python = '>=3.9'
 classifiers = [
   'Development Status :: 5 - Production/Stable',
