--- a/.github/workflows/sphinx_asdf_ci.yml
+++ b/.github/workflows/sphinx_asdf_ci.yml
@@ -24,6 +24,16 @@ jobs:
     strategy:
       matrix:
         include:
+          - name: Python 3.14 Tests
+            python-version: "3.14"
+            os: ubuntu-latest
+            toxenv: py314
+
+          - name: Python 3.13 Tests
+            python-version: "3.13"
+            os: ubuntu-latest
+            toxenv: py313
+
           - name: Python 3.12 Tests
             python-version: "3.12"
             os: ubuntu-latest
@@ -39,73 +49,68 @@ jobs:
             os: ubuntu-latest
             toxenv: py310
 
-          - name: Python 3.9 Tests
-            python-version: "3.9"
-            os: ubuntu-latest
-            toxenv: py39
-
-          - name: Python 3.11, Windows
-            python-version: "3.11"
+          - name: Python 3.13, Windows
+            python-version: "3.13"
             os: windows-latest
-            toxenv: py311
+            toxenv: py313
 
-          - name: Python 3.11, MacOS
-            python-version: "3.11"
+          - name: Python 3.13, MacOS
+            python-version: "3.13"
             os: macos-latest
-            toxenv: py311
+            toxenv: py313
 
           - name: Twine
-            python-version: "3.11"
+            python-version: "3.13"
             os: ubuntu-latest
             toxenv: twine
 
           - name: Document Checks
-            python-version: "3.11"
+            python-version: "3.13"
             os: ubuntu-latest
             toxenv: checkdocs
 
           - name: Code Style Checks
-            python-version: "3.11"
+            python-version: "3.13"
             os: ubuntu-latest
             toxenv: style
 
           - name: ASDF Standard Document Build
-            python-version: "3.11"
+            python-version: "3.13"
             os: ubuntu-latest
             toxenv: asdf-standard
 
           - name: ASDF Document Build
-            python-version: "3.11"
+            python-version: "3.13"
             os: ubuntu-latest
             toxenv: asdf
 
           - name: ASDF-transform-schemas Document Build
-            python-version: "3.11"
-            os: ubuntu-latest
+            python-version: "3.13"
+            os: ubuntu-lates
             toxenv: asdf-transform-schemas
 
           - name: ASDF-coordinates-schemas Document Build
-            python-version: "3.11"
+            python-version: "3.13"
             os: ubuntu-latest
             toxenv: asdf-coordinates-schemas
 
           - name: ASDF-wcs-schemas Document Build
-            python-version: "3.11"
+            python-version: "3.13"
             os: ubuntu-latest
             toxenv: asdf-wcs-schemas
 
           - name: ASDF-astropy Document Build
-            python-version: "3.11"
+            python-version: "3.13"
             os: ubuntu-latest
             toxenv: asdf-astropy
 
           - name: rad Document Build
-            python-version: "3.11"
+            python-version: "3.13"
             os: ubuntu-latest
             toxenv: rad
 
           - name: stdatamodels Document Build
-            python-version: "3.11"
+            python-version: "3.13"
             os: ubuntu-latest
             toxenv: stdatamodels
 
