add missing deps

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,10 @@ dependencies = [
     "packaging",
     "sphinx",
     "toml",
-
+    "numpydoc",
+    "pytest-doctestplus>=0.11",
+    "sphinx-automodapi",
+    "sphinxcontrib-jquery",
 ]
 [project.optional-dependencies]
 tests = [
